# Sandbox

./: .gitignore
C#/FizzBuzz/: Program.cs
C#/InfoInvest/: .env  InfoInvest.sln  docker-compose.dcproj  docker-compose.override.yml  docker-compose.yml
C#/InfoInvest/Assets.API/: Assets.API.csproj  Dockerfile  Program.cs
C#/InfoInvest/Assets.Infra/: AssetMongoRepository.cs  Assets.Infra.csproj
C#/InfoInvest/Assets.Tests/: UnitTest1.cs
C#/InfoInvest/Core.API/: Core.API.csproj  EndpointDefinitonExtensions.cs  IEndpointDefinition.cs  MongoExtensions.cs
C#/InfoInvest/Core.Infra/: Core.Infra.MongoDB.csproj  MongoRepository.cs
C#/InfoInvest/Transactions.API/: Dockerfile
C#/InfoInvest/Users.API/: Dockerfile  Program.cs  Users.API.csproj  appsettings.json
C#/InfoInvest/Users.Infra/: ClientMongoRepository.cs  ManagerMongoRepository.cs  Users.Infra.csproj
C#/Monads/: Monads.sln
C#/Monads/Monads.WebApi/: Program.cs
C++/l2lskin/: .gitignore
C++/l2lskin/l2l.skin/: l2l.skin.sln
C/LinkedList/: main.c
Java/CRUD-Clientes/: pom.xml
Rust/Basics/: Cargo.toml
Rust/brainrusty/: README.md
Rust/crudix/: Cargo.toml  README.md
Rust/crudix/src/domain/: pessoa.rs
Rust/crudix/src/endpoints/: mod.rs  pessoa.rs
Rust/crudix/src/endpoints/extensions/: endpoint_ext.rs
Rust/math_parser/: Cargo.toml
Rust/math_rs/: Cargo.toml
Rust/palette_extract/: Cargo.toml
Rust/palette_extract/benches/: k_means.rs
Rust/palette_extract/src/: cluster.rs  k_means.rs  lib.rs  main.rs
Rust/rustix/: Cargo.toml
Typescript/api_randomica/: Dockerfile  readme.md
(+67 files in other folders)
