[package]
name = "crudix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-web = "4.2.1"
actix-cors = "0.6.4"
env_logger = "0.10.0"
mongodb = "2.3.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
futures = "0.3.25"
chrono = { version = "0.4.23", features = ["serde"] }
anyhow = "1.0.68"
log = "0.4.17"

