[package]
name = "palette-extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "k_means"
harness = false

[dev-dependencies]
criterion = "0.5.1"

[dependencies]
image = "0.24.7"
anyhow = "1.0.75"
rand = "0.8.5"
imageproc = "0.23.0"
